--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,12 +13,12 @@
             <nav class="menu">
               <!-- Menu Links -->
               <div class="icon-list">
-                <a href="index.html#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
-                <a href="index.html#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
-                <a href="index.html#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
-                <a href="index.html#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
-                <a href="index.html#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
-                <a href="index.html#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
+                <a href="#home"><i class="fa fa-fw fa-home"></i><span>Home</span></a>
+                <a href="#about"><i class="fa fa-fw fa-quote-left"></i><span>About</span></a>
+                <a href="#service"><i class="fa fa-fw fa-globe"></i><span>Service</span></a>
+                <a href="#portfolio"><i class="fa fa-fw fa-picture-o"></i><span>Portfolio</span></a>
+                <a href="#blog"><i class="fa fa-fw fa-rss"></i><span>Blog</span></a>
+                <a href="#contact"><i class="fa fa-fw fa-envelope-o"></i><span>Contact</span></a>
               </div>
             </nav>
           </div>
@@ -143,7 +143,7 @@
           <div class="col-md-6 about-text">
               <h6> Front End Design</h6><!-- headline-->
               <p>----</p><br><!-- About Text 1 -->
-              <a href="index.html#team" class="weight-outline-btn">Read more</a><!-- read more button  -->			
+              <a href="#" class="weight-outline-btn">Read more</a><!-- read more button  -->			
           </div>
       </div>
       <!-- About 2 -->
@@ -151,7 +151,7 @@
           <div class="col-md-6 about-text">
               <h6>Beginner Coder</h6><!-- Headline -->
               <p> ---  </p><br><!-- About Text 2 -->
-              <a href="index.html#team" class="weight-outline-btn">Read more</a>	<!-- read more button  -->				
+              <a href="#" class="weight-outline-btn">Read more</a>	<!-- read more button  -->				
           </div>
           <div class="col-md-6 nopadding features-intro-img">
               <div class="about-image" style="background-image:url(../../assets/img/pexels-pixabay-247791.jpg)"></div><!-- about image 2 -->
@@ -165,7 +165,7 @@
           <div class="col-md-6 about-text">
               <h6> Database </h6><!-- Headline-->
               <p>----</p><br><!-- About Text 3 -->
-              <a href="index.html#team" class="weight-outline-btn">Read more</a><!-- read more button  -->					
+              <a href="#" class="weight-outline-btn">Read more</a><!-- read more button  -->					
           </div>
       </div>
   </div>
@@ -193,84 +193,102 @@
   <div class="container">
     <div class="row row-offset-0">
              
-    <!-- PORTFOLIO ITEM 1 -->
-    <div class="col-md-3 col-sm-6">
-        <div class="overlay-effect effects clearfix">
-            <div class="img">
-                <a href="../../assets/img/portfolio/portfolio-01-large.jpg" data-lightbox="roadtrip" title="Project One - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-01-thumbnail.jpg" alt="Portfolio Item"></a>
-            </div>
-        </div>
-    </div>
+    <!-- PORTFOLIO ITEM 1   Website Linked::::::::::::::::::::::::::-->
+    <div class="col-md-4 col-sm-9">
+      <div class="overlay-effect effects clearfix">
+          <div class="img">
+              <a  data-lightbox="roadtrip" title="Project One - Portfolio WEB App" onclick="window.location.href='https://aakaassshh.github.io/the.akashh/'; return false;">
+                  <img class="grayscale" src="../../assets/img/portfolio/desgin3.jpg" alt="Portfolio Item">
+              </a>
+          </div>
+      </div>
+  </div>
+  
     <!-- PORTFOLIO ITEM END -->
 
     <!-- PORTFOLIO ITEM 2 -->
-    <div class="col-md-3 col-sm-6">
+    <div class="col-md-4 col-sm-6">         
+
         <div class="overlay-effect effects clearfix">
             <div class="img">
-                <a href="../../assets/img/portfolio/portfolio-02-large.jpg" data-lightbox="roadtrip" title="Project Two - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-02-thumbnail.jpg" alt="Portfolio Item"></a>
+                <a href="../../assets/img/portfolio/dashboard.png" data-lightbox="roadtrip" title="Project Two - Dynamic Dashboard"><img class="grayscale" src="../../assets/img/portfolio/Black Modern Web 3 Technology YouTube Thumbnail.png" alt="Portfolio Item"></a>
             </div>
         </div>
     </div>
     <!-- PORTFOLIO ITEM END -->
                 
     <!-- PORTFOLIO ITEM 3 -->
-    <div class="col-md-3 col-sm-6">
+
+
+    <div class="col-md-4 col-sm-8">
         <div class="overlay-effect effects clearfix">
             <div class="img">
-                <a href="../../assets/img/portfolio/portfolio-03-large.jpg" data-lightbox="roadtrip" title="Project Three - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-03-thumbnail.jpg" alt="Portfolio Item"></a>
+                <a href="../../assets/img/portfolio/Purple Minimalist Healthy App Instagram Post.png" data-lightbox="roadtrip" title="Project Three - Recahrge App"><img class="grayscale" src="../../assets/img/portfolio/Purple Minimalist Healthy App Instagram Post.png" alt="Portfolio Item"></a>
             </div>
         </div>
     </div>
+
+
+
     <!-- PORTFOLIO ITEM END -->
                 
     <!-- PORTFOLIO ITEM 4 -->
-    <div class="col-md-3 col-sm-6 ">
+    <!-- <div class="col-md-3 col-sm-6 ">
         <div class="overlay-effect effects clearfix">
             <div class="img">
                 <a href="../../assets/img/portfolio/portfolio-04-large.jpg" data-lightbox="roadtrip" title="Project Four - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-04-thumbnail.jpg" alt="Portfolio Item"></a>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- PORTFOLIO ITEM END -->
              
     <!-- PORTFOLIO ITEM 5 -->
-    <div class="col-md-3 col-sm-6 ">
+
+    <!-- <div class="col-md-3 col-sm-6 ">
         <div class="overlay-effect effects clearfix">
             <div class="img">
                 <a href="../../assets/img/portfolio/portfolio-05-large.jpg" data-lightbox="roadtrip" title="Project Five - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-05-thumbnail.jpg" alt="Portfolio Item"></a>
             </div>
         </div>
-    </div>
+    </div> -->
+
     <!-- PORTFOLIO ITEM END -->
 
     <!-- PORTFOLIO ITEM 6 -->
-    <div class="col-md-3 col-sm-6">
+
+    <!-- <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
             <div class="img">
                 <a href="../../assets/img/portfolio/portfolio-06-large.jpg" data-lightbox="roadtrip" title="Project Six - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-06-thumbnail.jpg" alt="Portfolio Item"></a>
             </div>
         </div>
-    </div>
+    </div> -->
+
     <!-- PORTFOLIO ITEM END -->
                 
     <!-- PORTFOLIO ITEM 7 -->
-    <div class="col-md-3 col-sm-6">
+
+    <!-- <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
             <div class="img">
                 <a href="../../assets/img/portfolio/portfolio-07-large.jpg" data-lightbox="roadtrip" title="Project Seven - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-07-thumbnail.jpg" alt="Portfolio Item"></a>
             </div>
         </div>
-    </div>
+    </div> -->
+
     <!-- PORTFOLIO ITEM END -->
                 
     <!-- PORTFOLIO ITEM 8 -->
-    <div class="col-md-3 col-sm-6">
+
+    <!-- <div class="col-md-3 col-sm-6">
         <div class="overlay-effect effects clearfix">
             <div class="img">
                 <a href="../../assets/img/portfolio/portfolio-08-large.jpg" data-lightbox="roadtrip" title="Project Eight - Lorem Ipsum"><img class="grayscale" src="../../assets/img/portfolio/portfolio-08-thumbnail.jpg" alt="Portfolio Item"></a>
             </div>
-        </div>
-    </div>
+          </div>
+    </div> -->
+
+
     <!-- PORTFOLIO ITEM END -->
   </div><!--/row-->
 </div><!--/.container-->
